--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -29,16 +29,80 @@
     <form id="forma">
         <div class="agregar">
             <div class="agregar_contenedor">
-                <select class="agregar_tipo">
+                <select class="agregar_tipo" id="tipo">
                     <option selected value="ingreso">+</option>
                     <option value="egreso">-</option>
                 </select>
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <button></button>
+                <input type="text" class="agregar_descripcion" placeholder="Agregar descripción" id="descripcion">
+                <input type="number" class="agregar_valor" placeholder="Valor" step="any">
+                <button class="agregar_btn">
+                    <ion-icon name="checkmark-circle-outline"></ion-icon>
+                </button>
             </div>
         </div>
     </form>
+
+    <div class="contenedor limpiarEstilos">
+        <div class="ingreso">
+            <h2 class="ingreso_titulo">Ingresos</h2>
+            <div id="lista-ingresos">
+                <div class="elemento limpiarEstilos">
+                    <div class="elemento_descripcion">Salario</div>
+                    <div class="derecha limpiarEstilos">
+                        <div class="elemento_valor">+2,200.00</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar_btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="elemento limpiarEstilos">
+                    <div class="elemento_descripcion">Venta coche</div>
+                    <div class="derecha limpiarEstilos">
+                        <div class="elemento_valor">+1,500.00</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar_btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="egreso">
+            <h2 class="egreso_titulo">Egresos</h2>
+            <div id="lista-egresos">
+                <div class="elemento limpiarEstilos">
+                    <div class="elemento_descripcion">Renta departamento</div>
+                    <div class="derecha limpiarEstilos">
+                        <div class="elemento_valor">-900.00</div>
+                        <div class="elemento_porcentage">21%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar_btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="elemento limpiarEstilos">
+                    <div class="elemento_descripcion">Ropa</div>
+                    <div class="derecha limpiarEstilos">
+                        <div class="elemento_valor">-400.00</div>
+                        <div class="elemento_porcentage">9%</div>
+                        <div class="elemento_eliminar">
+                            <button class="elemento_eliminar_btn">
+                                <ion-icon name="close-circle-outline"></ion-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
