--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -101,7 +101,7 @@
         </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.mjs" type="module"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.js"></script>
 </body>
